popup trigger button vertical alignment fix

--- a/web/static/scss/partials/_cn-card.scss
+++ b/web/static/scss/partials/_cn-card.scss
@@ -417,12 +417,14 @@
     {
         display: block;
         position: absolute;
-        top: 0;
+        top: 50%;
         right: 0;
 
         width: 100%;
 
         border: none; //solid 1px red;
+
+        @include translateY(-50%);
 
         & > a
         {
